--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ python:
  - 2.7
 
 install:
-  - pip install . --use-mirrors
-  - pip install tiddlyweb tiddlywebplugins.utils dulwich pytest
+  - pip install --use-mirrors tiddlyweb tiddlywebplugins.utils dulwich pytest
 
 script: make test
